--- a/docs/devices/tariffs.mdx
+++ b/docs/devices/tariffs.mdx
@@ -244,7 +244,7 @@ Basis für viele dynamische Tarife.
 
 ### Fraunhofer ISE 
 
-Day-ahead Energiepreise (je kWh) an der Börse. Kann ohne vorherige Anmeldung auf https://api.energy-charts.info/ abgerufen werden. Nutzbar u.a. für dynamische Stromtarife, wo der Anbieter bis dato auf der Kundenschnittstelle noch kein Preis-Vorhersagen anbietet.
+Nur noch für Deutschland/Luxemburg verfügbar. Day-ahead Energiepreise (je kWh) an der Börse. Kann ohne vorherige Anmeldung auf https://api.energy-charts.info/ abgerufen werden. Nutzbar u.a. für dynamische Stromtarife, wo der Anbieter bis dato auf der Kundenschnittstelle noch kein Preis-Vorhersagen anbietet.
 
 <DeviceConfig code={`tariffs:
     grid:
